@@ -1,5 +1,16 @@
 2011-06-29  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	Disable epilogue unwinders on recent GCCs.
+	* amd64-tdep.c (amd64_in_function_epilogue_p): New variable symtab,
+	initialize it, return 0 on EPILOGUE_UNWIND_VALID.
+	* dwarf2read.c (process_full_comp_unit): Initialize
+	EPILOGUE_UNWIND_VALID.
+	* i386-tdep.c (i386_in_function_epilogue_p): New variable symtab,
+	initialize it, return 0 on EPILOGUE_UNWIND_VALID.
+	* symtab.h (struct symtab): New field epilogue_unwind_valid.
+
+2011-06-29  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	Code cleanup - reformatting.
 	* dwarf2read.c (producer_is_gcc_ge_4_0): Rename to ...
 	(producer_is_gcc_ge_4): ... here, change the return value.
